# blip25-mbe-py

./: .gitignore  Cargo.toml  LICENSE  PATENT_NOTICE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  wheels.yml
python/blip25_mbe/: __init__.py  _blip25_mbe.pyi  dvsi_soft_decision.py  dvsi_soft_decision.pyi  rate33.py  rate33.pyi
src/: lib.rs
tests/: test_rate33.py  test_smoke.py  test_soft_decision.py  test_tier2.py
